# Course3

1сем/REALFILM(курсач)/: REALFILM.sln  REALFILM.sql  ~$яснительная записка.docx  Лист_задания Стрелковская В.А. .docx
1сем/МСХОАД/: Kr1.sql  Л1_Проектирование_БД.ppt  Л2_Иерархии.ppt  Л3_Группировки.ppt  Л5_Model.ppt  Л6_Match.ppt
1сем/Проектирование программного обеспечения/: lab01.docx  lab02.docx  lab03.docx  lab04.docx  lab05.docx  lab06.docx  lab07.docx  (+1 more)
2сем/Системное программирование/Лаба1/laba1/: CMakeLists.txt
2сем/Системное программирование/Лаба1/laba1/lab1c/: CMakeLists.txt
2сем/Системное программирование/Лаба1/laba1/lab1c/src/: lab1c.c  lab1c.i  lab1c.s
2сем/Системное программирование/Лаба1/laba1/lab1cs/: CMakeLists.txt
2сем/Системное программирование/Лаба1/laba1/lab1cs/src/: lab1cs.cs
2сем/Системное программирование/Лаба2/lab02/: CMakeLists.txt
2сем/Системное программирование/Лаба2/lab02/Lab-02a/: CMakeLists.txt
2сем/Системное программирование/Лаба2/lab02/Lab-02a/src/: main.c
2сем/Системное программирование/Лаба2/lab02/Lab-02b/: CMakeLists.txt
2сем/Системное программирование/Лаба2/lab02/Lab-02b/src/: main.c
2сем/Системное программирование/Лаба2/lab02/Lab-02c/: CMakeLists.txt
2сем/Системное программирование/Лаба2/lab02/Lab-02c/src/: reader.c  writer.c
2сем/Системное программирование/Лаба2/lab02/Lab-02d/: CMakeLists.txt
2сем/Системное программирование/Лаба2/lab02/Lab-02d/src/: main.c
2сем/Системное программирование/Лаба2/lab02/Lab-02e/: CMakeLists.txt
2сем/Системное программирование/Лаба2/lab02/Lab-02e/src/: reader.c  writer.c
(+1070 files in other folders)
